nymea-plugins-modbus (1.7.009) jammy; urgency=medium

  * Inital release of Solax X3 EV Charger. Needs to be used with X3 Inverter.
  * Added kostalmeter plugin (copy of bgetech, does not include sdm72)
  * Add generator to duplicate existing integrations with different names
  * Fix for Solax X3 Inverter: Wrong warning message

 -- Luis Reber <l.reber@consolinno.de> Wed, 17 Jul 2024 10:14:00 +0200

nymea-plugins-modbus (1.7.008) jammy; urgency=medium

  * Fixes for Solax power calculation (RTU)
  * Added Sax energy storage plugin.
  * Added plugin for Growatt inverter including meter and battery.

 -- Luis Reber <l.reber@consolinno.de> Tue, 04 Jun 2024 10:29:00 +0200

nymea-plugins-modbus (1.7.007) buster focal jammy; urgency=medium

  * Added ABB terra plugin
  * Update interface of evcharger plugin to match new interface. 
  * Added plugin for alven eve single pro-line
  * Azzurro: set states to 0 when not connected. Added outlier detection to energy counters.
  * New plugin: Solax inverter
  * Amperfied Energy Control: code improvement & bugfixes.
  * Webasto ev-charger: removed Live, added Next and Unite.

 -- Luis Reber <l.reber@consolinno.de> Fri, 26 Apr 2024 09:50:00 +0200

nymea-plugins-modbus (1.7.006) buster focal jammy; urgency=medium

  * Kaco SunSpec: set inverter power state to 0 when not connected.
  * Kaco SunSpec: improved modbus RTU discovery.

 -- Sebastian Ringer <s.ringer@consolinno.de> Thu, 13 Mar 2024 17:21:53 +0200

nymea-plugins-modbus (1.7.005-1) buster focal jammy; urgency=medium

  * Nymea Interface: Use old interface for evcharger - Hotfix 1.1.1 build

 -- Florian Knab <f.knab@consolinno.de> Mon, 8 Jan 2024 13:44:53 +0100

nymea-plugins-modbus (1.7.005) buster focal jammy; urgency=medium

  * GoodWe: fixed some meter values sign and scaling.

 -- Sebastian Ringer <s.ringer@consolinno.de> Wed, 20 Dec 2023 17:21:53 +0200

nymea-plugins-modbus (1.7.004) buster focal jammy; urgency=medium

  * Amperfied Energy Control discovery improved.