@@ -3,7 +3,8 @@ nymea-plugins-modbus (1.7.009) jammy; urgency=medium
   * Inital release of Solax X3 EV Charger. Needs to be used with X3 Inverter.
   * Added kostalmeter plugin (copy of bgetech, does not include sdm72)
   * Add generator to duplicate existing integrations with different names
-  * Fix for Solax X3 Inverter: Wrong warning message
+  * Fix for Solax X3 Inverter: Wrong warning message; Updated inverter power
+    calculation
 
  -- Luis Reber <l.reber@consolinno.de> Wed, 17 Jul 2024 10:14:00 +0200
 
